--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@ comments: false
                   <a href="{{ site.url }}{{ post.url }}"><span class="top-most-flag">[置顶]</span>{{ post.title }}</a>
                 </h3>
                 <p class="repo-list-description">
-                {{ post.excerpt | strip_html | strip }}
+                  <!--  句号分割 -->
+                {{ post.excerpt | strip_html | strip }} 
                 </p>
                 <p class="repo-list-meta">
                 <span class="meta-info">
