--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ comments: false
     </div>
 </section>
 <!-- /.banner -->
-<section class="container content">
+<secti天on class="container content">
     <div class="columns">
         <div class="column two-thirds" >
             <ol class="repo-list">
