--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@ comments: false
                 </h3>
                 <p class="repo-list-description">
                   <!--  句号分割 -->
-                {{ post.excerpt | strip_html | strip }} 
+                <!-- {{ post.excerpt | strip_html | strip }}  -->
+                {{post.description}}
                 </p>
                 <p class="repo-list-meta">
                 <span class="meta-info">
@@ -82,7 +83,8 @@ comments: false
                   <a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
                 </h3>
                 <p class="repo-list-description">
-                {{ post.excerpt | strip_html | strip }}
+                <!-- {{ post.excerpt | strip_html | strip }} -->
+                 {{post.description}}
                 </p>
                 <p class="repo-list-meta">
                 <span class="meta-info">
