--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ comments: false
                 <p class="repo-list-description">
                 <!-- {{ post.excerpt | strip_html | strip }} -->
 
-                  {{page.description}}
+                 {{post.description}}
                 </p>
                 <p class="repo-list-meta">
                 <span class="meta-info">
@@ -84,7 +84,7 @@ comments: false
                 </h3>
                 <p class="repo-list-description">
                 <!-- {{ post.excerpt | strip_html | strip }} -->
-                {{page.description}}
+                {{post.description}}
                 </p>
                 <p class="repo-list-meta">
                 <span class="meta-info">
